--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #cea9ce;">
-    <a class="navbar-brand" href="#">Expandsocity</a>
+    <a class="navbar-brand" href="/SocityExpand/">Expandsocity</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -24,14 +24,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/SocityExpand">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about.html">About</a>
+          <a class="nav-link" href="/SocityExpand/about.html">About</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/Contact.html">Contact Us</a>
+          <a class="nav-link" href="/SocityExpand/Contact.html">Contact Us</a>
         </li>
 
 
