--- a/about.html
+++ b/about.html
@@ -23,39 +23,39 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/about.html">About</a>
-                </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/SocityExpand">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/SocityExpand/about.html">About</a>
+        </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="/Contact.html">Contact Us</a>
-                </li>
-
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Buy
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">1 BHK</a>
-                        <a class="dropdown-item" href="#">2 BHK</a>
-                        <a class="dropdown-item" href="#">3 BHK</a>
-
-                        <div class="dropdown-divider"></div>
-
-                        <a class="dropdown-item" href="#">Broker Contacts</a>
-                        <a class="dropdown-item" href="#">Support</a>
+        <li class="nav-item">
+          <a class="nav-link" href="/SocityExpand/Contact.html">Contact Us</a>
+        </li>
 
 
-                    </div>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Buy
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">1 BHK</a>
+            <a class="dropdown-item" href="#">2 BHK</a>
+            <a class="dropdown-item" href="#">3 BHK</a>
+
+            <div class="dropdown-divider"></div>
+
+            <a class="dropdown-item" href="#">Broker Contacts</a>
+            <a class="dropdown-item" href="#">Support</a>
+
+
+          </div>
 
 
 
-            </ul>
+      </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
